--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
   <link rel="stylesheet" href="tire_a_partwm.css" type="text/css" />
 </head>
 <body>
+	
+	<div class="wrapper">
+<div class="watermark"></div>
+    <div class="inner-container">
+   
+
 <h1 id="baccalauréat-en-systèmes-informatiques-et-électroniques----description-officielle">Baccalauréat en systèmes informatiques et électroniques -- Description officielle</h1>
 <h2 id="grade">Grade</h2>
 <p>Bachelier ès sciences appliquées, B.Sc.A.</p>
@@ -17,6 +23,10 @@
 <h2 id="objectifs">Objectifs</h2>
 <p>Ce programme vise à doter l'étudiante, l'étudiant d'un solide ensemble de compétences théoriques et pratiques en informatique et en électronique, appuyées sur des bases en mathématiques et en physique, et complétées par une formation générale pertinente. La formation est orientée vers la conception et le développement de systèmes informatiques et électroniques combinant matériel et logiciel. On y approfondit notamment les technologies des microprocesseurs, microcontrôleurs, systèmes d'exploitation, langages de programmation et de spécification de bas niveau et spécialisés, capteurs, équipements de communication et de réseautage embarqués. En complément de cette formation technique, on y développe des compétences générales et relationnelles, notamment en gestion et en communication. La dimension pratique est présente tout au long de la formation, notamment par la réalisation d'activités d'intégration de type projet à chaque année d'études. Des cours au choix permettent à l’étudiant de compléter sa formation en l'orientant vers un domaine en plein essor, tel que les télécommunications et la mobilité, la sécurité informatique, le graphisme et les médias, l'internet et les objets intelligents et interactifs, les microsystèmes ou les systèmes embarqués.</p>
 <p>En plus d'ouvrir la voie aux études de cycles supérieurs en sciences appliquées, le programme prépare l'étudiant au travail comme concepteur et développeur de systèmes électroniques et informatiques dans des centres de recherche, les entreprises de haute technologie ou du secteur manufacturier, les services publics et privés, les bureaux d'étude, etc.</p>
+
+ </div>
+</div>
+
 <h2 id="conditions-dadmission">Conditions d’admission</h2>
 <h3 id="capacité-daccueil">Capacité d'accueil</h3>
 <p>Le programme n'est pas contingenté.</p>
