graphe avec prealables corrige 2 cours et ajout de tel3175

--- a/index.html
+++ b/index.html
@@ -334,10 +334,12 @@
 <h4 id="mic2116-projet-intégrateur-1-1-crédit">MIC2116 Projet intégrateur 1 (1 crédit)</h4>
 <p>La réalisation de ce premier projet intégrateur permet aux étudiants de s’initier à la conception de systèmes informatique et électronique. Cette initiation au développement d’un système simple leur permettra également de mieux comprendre les matières traitées dans plusieurs cours subséquents touchant à l’analyse de circuits, au traitement numérique des signaux, etc.</p>
 <p>Chaque étudiant doit œuvrer dans l’objectif de développer un projet dont les spécifications auront été établies lors du cours préalable MIC1116 Électronique pratique. Le projet permet d’initier les étudiants à la résolution de problèmes, l’organisation du travail et à développer l’autonomie. Il permet également aux étudiants de mettre en pratique les notions acquises au cours du premier trimestre, notamment dans les cours préalables. Les progrès dans la réalisation d’un prototype seront documentés régulièrement. La production finale mènera à la rédaction d’un rapport technique, la production d’une vidéo et une publication sur un forum spécialisé. Les réalisations des étudiants seront consignées dans un porte-folio professionnel.</p>
-<p>Préalables académiques: MIC1116 Électronique pratique</p>
+<p>Modalité d'enseignement</p>
+<p>Ce projet intégrateur sera supervisé par un professeur tout au long du trimestre.</p>
+<p>Préalables académiques: INF1120 Programmation I; MIC1116 Électronique pratique</p>
 <h4 id="mic3111-projet-intégrateur-2-1-crédit">MIC3111 Projet intégrateur 2 (1 crédit)</h4>
 <p>La réalisation de ce deuxième projet intégrateur permet aux étudiants de mettre en pratique les connaissances acquises au cours des premiers trimestres du programme. Chaque étudiant doit œuvrer dans l’objectif de développer un système complexe intégrant plusieurs composantes et dont les spécifications auront été établies lors du cours préalable MIC2111 Analyse de circuits. Le projet permet d’initier les étudiants au développement de spécifications, et de renforcer leurs habiletés méthodologiques, de résolution de problèmes et d’organisation du travail. Les progrès dans la réalisation d’un prototype seront documentés régulièrement. La production finale mènera à la rédaction d’un rapport technique, la production d’une vidéo et une publication sur un forum spécialisé. Les réalisations des étudiants seront consignées dans un porte-folio professionnel.</p>
-<p>Préalables académiques: MIC2111 Analyse de circuits</p>
+<p>Préalables académiques: MIC2111 Analyse de circuits; MIC6130 Circuits intégrés programmables</p>
 <h4 id="mic3220-signaux-et-systèmes">MIC3220 Signaux et systèmes</h4>
 <p>Représentation d'un signal et d'un système. Systèmes continus et systèmes discrets. Entrées, sorties, état d'un système. Systèmes linéaires. Analyse des signaux: série de Fourier; transformée de Fourier; énergie d'un signal; fonction densité spectrale; signaux échantillonnés; transformée de Fourier rapide; théorème d'échantillonnage. Réponse temporelle et fréquentielle d'un système linéaire. Fonction de transfert. Convolution. Application à la modulation et à l'échantillonnage. Transformée Z. Conditions de stabilité d'un système. Exercices dirigés et travaux pratiques en laboratoire (2 heures/semaine).</p>
 <p>Préalables académiques: MAT1115 Calcul I</p>
@@ -347,7 +349,7 @@
 <li><p>connaître les différentes étapes de conception d'un circuit;</p></li>
 <li><p>comprendre le rôle et le fonctionnement des principaux dispositifs semiconducteurs avec les différents modèles liés à chaque composant: diode, transistors bipolaire et à effet de champ;</p></li>
 <li><p>analyser les comportements aux basses et hautes fréquences des amplificateurs à un ou plusieurs étages;</p></li>
-<li><p>connaître l'amplificateur opérationnel et ses caractéristiques idéales et rélles;</p></li>
+<li><p>connaître l'amplificateur opérationnel et ses caractéristiques idéales et réelles;</p></li>
 <li><p>comprendre les différents types de rétroaction;</p></li>
 <li><p>savoir optimiser la vitesse et la consommation énergétique des circuits logiques CMOS au niveau des transistors.</p></li>
 </ul>
@@ -389,6 +391,8 @@
 <p>Préalables académiques: MIC1116 Électronique pratique</p>
 <h4 id="mic6012-stage-dintégration">MIC6012 Stage d'intégration</h4>
 <p>Cette activité permet aux étudiants de compléter leur formation en milieu de travail en effectuant un stage d'intégration d'au moins quatre mois dans un milieu de travail à l'extérieur de l'Université. Les activités du stage doivent mettre en applications les compétences acquises lors de la formation académique dans le programme. Un rapport de stage permet de sanctionner la réussite de l'activité. Les réalisations des étudiants seront consignées dans son porte-folio professionnel. Cette activité est évaluée selon la notation succès ou échec.</p>
+<p>Conditions d'accès</p>
+<p>Pour pouvoir être inscrit à cette activité, l'étudiant doit avoir complété ou être en voie de compléter au moins 75 crédits au programme avec une moyenne égale ou supérieure à 2,5 sur 4,3. Le stage se déroule normalement lors du dernier trimestre d'été du cheminement. L'étudiant doit avoir identifié le lieu du stage et complété son inscription à cette activité au cours du trimestre d'automne précédant le stage.</p>
 <h4 id="mic6130-circuits-intégrés-programmables">MIC6130 Circuits intégrés programmables</h4>
 <p>Ce cours vise à permettre de faire l'étude des différents circuits intégrés programmables et de leurs applications dans la conception des systèmes électroniques; de maîtriser les outils CAO pour la synthèse et la programmation des circuits intégrés programmables. Étude des différents circuits intégrés programmables et de leurs applications. Circuits ASIC, PAL, FPLA, PLD, matrice de portes programmable - FPGA. Théorie et outils CAO pour la synthèse et la programmation des circuits intégrés programmables. Conception de systèmes avec des composants programmables. Travaux pratiques en laboratoire (2 heures/semaine).</p>
 <p>Préalables académiques: MIC1065 Circuits logiques</p>
@@ -407,6 +411,13 @@
 <p>Ce cours a pour objectif de susciter la réflexion sur les problèmes qu'on aperçoit lorsqu'on observe l'activité technoscientifique contemporaine du point de vue d'une philosophie de l'homme et de la société puis du point de vue de l'éthique. Les aspects suivants de la recherche scientifique et de l'activité technologique pourront être abordés: leur institutionnalisation, leur taux de croissance, leur impact sur la vie privée, sociale, politique ou économique; les valeurs qui les inspirent, celles qu'elles véhiculent; différence entre leurs pratiques réelles et leur image dans les médias de communication; leur place dans la gestion des grands ensembles sociaux.</p>
 <h4 id="soc6210-sociologie-de-la-technologie">SOC6210 Sociologie de la technologie</h4>
 <p>L'émergence et l'institutionnalisation de la technologie. La science et la technologie: leurs rapports mutuels et leur différenciation. Le progrès technique dans ses dimensions utopique et idéologique. La technologie et les techniques dans leurs rapports avec la structure économique, notamment comme produit des rapports sociaux de production et comme facteur de division technique et sociale du travail. Le développement technologique et ses rapports avec le pouvoir politique et l'appareil militaro-industriel. Les techniciens comme catégorie sociale et leur place dans les rapports sociaux. Les formes nouvelles de l'automation (v.g. robotique, bureautique, télématique, etc.) et leurs répercussions sociales.</p>
+<h4 id="tel3175---interconnexions-et-communications">TEL3175 - Interconnexions et communications</h4>
+<p>Description</p>
+<p>Introduire les concepts fondamentaux et les mécanismes de base régissant l'interconnexion et la communication entre systèmes informatiques. Ce cours vise à étudier les réseaux de communications en présentant les techniques et équipements de base permettant l'interconnexion, l'accès au support de transmission, la fiabilité et l'efficacité de transmission. Le cours aborde la couche physique, le codage de canal, la modulation, la couche d'accès multiple, la couche de liaison de données, les mécanismes de contrôle d'erreurs de transmission, le partage des ressources, les réseaux locaux et sans fil.</p>
+<p>Modalité d'enseignement</p>
+<p>Trois heures de cours par semaine. Deux heures de laboratoires par semaine.</p>
+<p>Préalables académiques:</p>
+<p>INF1105 - Introduction à la programmation scientifique ou INF1120 - Programmation I</p>
 <h4 id="tel5025-systèmes-de-télécommunications-embarquées">TEL5025 Systèmes de télécommunications embarquées</h4>
 <p>Familiariser l’étudiant avec les systèmes de réseaux embarqués et les réseaux de senseurs et apprendre les notions de conception d’un réseau embarqué. À la fin de ce cours, l'étudiant devra être en mesure de:</p>
 <ul>
@@ -716,6 +727,8 @@
 </table>
 </div>
 
+<h4 id="préalables">Préalables</h4>
+<p>Glisser la souris sur les cases pour afficher les titres des différentes activités</p>
 
 <script type="text/javascript">
 tooltip = null;
@@ -824,38 +837,38 @@ tooltip.style.display = "none";
 <div class="tooltip" id="n31">Normalement offert l'été</div>
 
 <map name="image1_1">
-  <area shape="rect" coords="31,187,194,217" alt="" onmouseover="showTooltip('n31')" onmouseout="hideTooltip()"/>
-  <area shape="rect" coords="31,138,240,168" alt="" onmouseover="showTooltip('n30')" onmouseout="hideTooltip()"/>
-  <area shape="rect" coords="31,90,240,120" alt="" onmouseover="showTooltip('n29')" onmouseout="hideTooltip()"/>
-  <area shape="rect" coords="324,17,593,47" alt="" onmouseover="showTooltip('n28')" onmouseout="hideTooltip()"/>
-  <area shape="rect" coords="971,558,1038,651" alt="" onmouseover="showTooltip('n27')" onmouseout="hideTooltip()"/>
-  <area shape="rect" coords="875,386,941,479" alt="" onmouseover="showTooltip('n26')" onmouseout="hideTooltip()"/>
-  <area shape="rect" coords="490,558,556,651" alt="" onmouseover="showTooltip('n25')" onmouseout="hideTooltip()"/>
-  <area shape="rect" coords="580,214,647,307" alt="" onmouseover="showTooltip('n24')" onmouseout="hideTooltip()"/>
-  <area shape="rect" coords="111,558,178,651" alt="" onmouseover="showTooltip('n23')" onmouseout="hideTooltip()"/>
-  <area shape="rect" coords="775,214,844,307" alt="" onmouseover="showTooltip('n22')" onmouseout="hideTooltip()"/>
-  <area shape="rect" coords="385,214,456,307" alt="" onmouseover="showTooltip('n21')" onmouseout="hideTooltip()"/>
-  <area shape="rect" coords="971,386,1038,479" alt="" onmouseover="showTooltip('n20')" onmouseout="hideTooltip()"/>
-  <area shape="rect" coords="680,558,747,651" alt="" onmouseover="showTooltip('n19')" onmouseout="hideTooltip()"/>
-  <area shape="rect" coords="795,558,861,651" alt="" onmouseover="showTooltip('n18')" onmouseout="hideTooltip()"/>
-  <area shape="rect" coords="396,558,460,651" alt="" onmouseover="showTooltip('n17')" onmouseout="hideTooltip()"/>
-  <area shape="rect" coords="208,558,272,651" alt="" onmouseover="showTooltip('n16')" onmouseout="hideTooltip()"/>
-  <area shape="rect" coords="15,558,81,651" alt="" onmouseover="showTooltip('n15')" onmouseout="hideTooltip()"/>
-  <area shape="rect" coords="778,386,845,479" alt="" onmouseover="showTooltip('n14')" onmouseout="hideTooltip()"/>
-  <area shape="rect" coords="302,558,366,651" alt="" onmouseover="showTooltip('n13')" onmouseout="hideTooltip()"/>
-  <area shape="rect" coords="192,386,256,479" alt="" onmouseover="showTooltip('n12')" onmouseout="hideTooltip()"/>
-  <area shape="rect" coords="586,558,650,651" alt="" onmouseover="showTooltip('n11')" onmouseout="hideTooltip()"/>
-  <area shape="rect" coords="490,386,556,479" alt="" onmouseover="showTooltip('n10')" onmouseout="hideTooltip()"/>
-  <area shape="rect" coords="874,214,941,307" alt="" onmouseover="showTooltip('n9')" onmouseout="hideTooltip()"/>
-  <area shape="rect" coords="681,386,748,479" alt="" onmouseover="showTooltip('n8')" onmouseout="hideTooltip()"/>
-  <area shape="rect" coords="31,386,98,479" alt="" onmouseover="showTooltip('n7')" onmouseout="hideTooltip()"/>
-  <area shape="rect" coords="286,386,350,479" alt="" onmouseover="showTooltip('n6')" onmouseout="hideTooltip()"/>
-  <area shape="rect" coords="396,386,460,479" alt="" onmouseover="showTooltip('n5')" onmouseout="hideTooltip()"/>
-  <area shape="rect" coords="678,214,745,307" alt="" onmouseover="showTooltip('n4')" onmouseout="hideTooltip()"/>
-  <area shape="rect" coords="403,90,473,183" alt="" onmouseover="showTooltip('n3')" onmouseout="hideTooltip()"/>
-  <area shape="rect" coords="586,386,650,479" alt="" onmouseover="showTooltip('n2')" onmouseout="hideTooltip()"/>
-  <area shape="rect" coords="486,214,550,307" alt="" onmouseover="showTooltip('n1')" onmouseout="hideTooltip()"/>
-  <area shape="rect" coords="971,214,1044,307" alt="" onmouseover="showTooltip('n0')" onmouseout="hideTooltip()"/>
+  <area shape="rect" coords="15,193,177,223" alt="" onmouseover="showTooltip('n31')" onmouseout="hideTooltip()"/>
+  <area shape="rect" coords="15,133,223,163" alt="" onmouseover="showTooltip('n30')" onmouseout="hideTooltip()"/>
+  <area shape="rect" coords="15,84,223,114" alt="" onmouseover="showTooltip('n29')" onmouseout="hideTooltip()"/>
+  <area shape="rect" coords="386,17,655,47" alt="" onmouseover="showTooltip('n28')" onmouseout="hideTooltip()"/>
+  <area shape="rect" coords="971,602,1038,695" alt="" onmouseover="showTooltip('n27')" onmouseout="hideTooltip()"/>
+  <area shape="rect" coords="972,446,1038,539" alt="" onmouseover="showTooltip('n26')" onmouseout="hideTooltip()"/>
+  <area shape="rect" coords="487,602,553,695" alt="" onmouseover="showTooltip('n25')" onmouseout="hideTooltip()"/>
+  <area shape="rect" coords="794,602,860,695" alt="" onmouseover="showTooltip('n24')" onmouseout="hideTooltip()"/>
+  <area shape="rect" coords="15,602,81,695" alt="" onmouseover="showTooltip('n23')" onmouseout="hideTooltip()"/>
+  <area shape="rect" coords="775,226,845,319" alt="" onmouseover="showTooltip('n22')" onmouseout="hideTooltip()"/>
+  <area shape="rect" coords="194,226,264,319" alt="" onmouseover="showTooltip('n21')" onmouseout="hideTooltip()"/>
+  <area shape="rect" coords="875,446,942,539" alt="" onmouseover="showTooltip('n20')" onmouseout="hideTooltip()"/>
+  <area shape="rect" coords="697,602,764,695" alt="" onmouseover="showTooltip('n19')" onmouseout="hideTooltip()"/>
+  <area shape="rect" coords="600,602,667,695" alt="" onmouseover="showTooltip('n18')" onmouseout="hideTooltip()"/>
+  <area shape="rect" coords="299,602,363,695" alt="" onmouseover="showTooltip('n17')" onmouseout="hideTooltip()"/>
+  <area shape="rect" coords="111,602,175,695" alt="" onmouseover="showTooltip('n16')" onmouseout="hideTooltip()"/>
+  <area shape="rect" coords="583,446,650,539" alt="" onmouseover="showTooltip('n15')" onmouseout="hideTooltip()"/>
+  <area shape="rect" coords="778,446,845,539" alt="" onmouseover="showTooltip('n14')" onmouseout="hideTooltip()"/>
+  <area shape="rect" coords="205,602,269,695" alt="" onmouseover="showTooltip('n13')" onmouseout="hideTooltip()"/>
+  <area shape="rect" coords="189,446,253,539" alt="" onmouseover="showTooltip('n12')" onmouseout="hideTooltip()"/>
+  <area shape="rect" coords="393,602,457,695" alt="" onmouseover="showTooltip('n11')" onmouseout="hideTooltip()"/>
+  <area shape="rect" coords="487,446,553,539" alt="" onmouseover="showTooltip('n10')" onmouseout="hideTooltip()"/>
+  <area shape="rect" coords="875,226,942,319" alt="" onmouseover="showTooltip('n9')" onmouseout="hideTooltip()"/>
+  <area shape="rect" coords="681,446,748,539" alt="" onmouseover="showTooltip('n8')" onmouseout="hideTooltip()"/>
+  <area shape="rect" coords="294,226,361,319" alt="" onmouseover="showTooltip('n7')" onmouseout="hideTooltip()"/>
+  <area shape="rect" coords="95,446,159,539" alt="" onmouseover="showTooltip('n6')" onmouseout="hideTooltip()"/>
+  <area shape="rect" coords="299,446,363,539" alt="" onmouseover="showTooltip('n5')" onmouseout="hideTooltip()"/>
+  <area shape="rect" coords="678,226,745,319" alt="" onmouseover="showTooltip('n4')" onmouseout="hideTooltip()"/>
+  <area shape="rect" coords="326,102,396,195" alt="" onmouseover="showTooltip('n3')" onmouseout="hideTooltip()"/>
+  <area shape="rect" coords="393,446,457,539" alt="" onmouseover="showTooltip('n2')" onmouseout="hideTooltip()"/>
+  <area shape="rect" coords="391,226,455,319" alt="" onmouseover="showTooltip('n1')" onmouseout="hideTooltip()"/>
+  <area shape="rect" coords="972,226,1044,319" alt="" onmouseover="showTooltip('n0')" onmouseout="hideTooltip()"/>
 </map>
 
 
