--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <title>proto_home_lab_sanstableau</title></head>
 <link rel="stylesheet" href="styles.css" type="text/css" />
 
-<body><h1>Équipements pour le laboratoire-maison BSIE</h1>
+<body><h1>Équipements pour le laboratoire-maison BSIE &check;</h1>
 <p>Que ce soit pour faire vos propres expérimentations à la maison, pour approfondir et parfaire vos connaissances, voire pour pouvoir réaliser certaines des expériences exigées dans les cours du programme, il peut être très avantageux de se constituer, à coûts modestes, son propre laboratoire d&#39;expérimentation en systèmes informatiques et électroniques. </p>
 <p>Afin de vous guider dans cette démarche, nous avons préparé une liste de suggestions d&#39;équipements et de matériel. Les prix sont donnés à titre indicatif seulement, il y a souvent des fluctuations de prix dans le domaine (et parfois à la baisse!). </p>
 <p>À chaque équipement est associée une liste des principaux cours du bacc. pour lesquels l&#39;instrument pourrait être utile.</p>
