--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 </head>
 <body>
 <div id="content" class="content">
-<h1 class="title">Ressources pour <i>Introduction aux circuits logiques</i></h1>
+<h1 class="title">Ressources pour <i>Circuits logiques combinatoires et séquentiels</i></h1>
 <div id="outline-container-org1eeafd1" class="outline-2">
 <h2 id="org1eeafd1">Ressources Web</h2>
 <div class="outline-text-2" id="text-org1eeafd1">
